--- a/README.org
+++ b/README.org
@@ -113,10 +113,20 @@ above) either in your path or editing the reciple
 :ID:       org_gcr_2019-03-06T17-15-24-06-00_cosmicality:3386D277-56FD-4D2F-BE0C-56553541CD25
 :END:
 
-If you are a developer or even just feel like exploring the code a little more
-then you can run Org2Blog and it's supporting packages by downloading then
-loading them yourself. Doing so will get you familiar with things like library
-versions, the ~load-path~, =Elisp=, and =Git=.
+If you are a developer or even just feel like exploring the code a little for
+the first time then Org2Blog is a great place to start. Even better: you've
+already got everything you need. Specifically Emacs and all of the code
+required to run Org2Blog are only here for you running and ready for you to
+dig into it. Simply find a function you want to study, position the cursor on
+it, type ~C-h f~, choose that function name, and hit enter. Now you will see a
+link for the source code. Position the cursor there and hit enter and you are
+ready to study. You can make changes here, run them, and see how things work.
+All of the code has already been installed automatically by the package
+manager so you don't need to do anything else: just dig into the code. This is
+the easiest way to get started with the source code. If you want to do more
+then you can run Org2Blog and it's supporting packages by downloading their
+source loading them yourself. Doing so will get you familiar with things like
+library versions, the ~load-path~, =Elisp=, and =Git=.
 
 Org2Blog's dependencies are defined in ~org2blog-def.el~. To get you started
 quickly there are two helper functions here:
@@ -143,12 +153,9 @@ And this
 (require 'htmlize)
 #+END_SRC
 
-Finally automatically update this document's Table of Contents by adding this
-hook to Org mode:
-
-#+BEGIN_SRC emacs-lisp
-(add-hook 'org-mode-hook #'toc-org-mode)
-#+END_SRC
+Finally if you make changes to the readme then first install the package
+[[https://github.com/alphapapa/org-make-toc][org-make-toc]] so the table of contents will get automatically updated after you
+make changes.
 
 Now you've got everything you need to run Org2Blog against its source code.
 With this set up you can start playing around with things and even making
