--- a/README.org
+++ b/README.org
@@ -1346,6 +1346,8 @@ around it.
 <a href=https://alphapapa.github.io/dont-tread-on-emacs/><img src="https://raw.githubusercontent.com/alphapapa/org-make-toc/master/dont-tread-on-emacs-150.png" align="left"></a>
 #+end_html
 
+file:/images/logo-icon.png
+
 # Local Variables:
 # org-export-with-properties: ()
 # org-export-with-title: t
