--- a/README.org
+++ b/README.org
@@ -1343,7 +1343,8 @@ around it.
 
 - [[./LICENSE.txt][GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007]].
 
-file:/images/logo-icon.png
+[[file:/images/logo-color-multi.png]]
+[[file:/images/logo-icon.png]]
 
 # Local Variables:
 # org-export-with-properties: ()
