--- a/README.org
+++ b/README.org
@@ -1285,34 +1285,22 @@ Plan on staying positive even when things don't go as planned!
 
 It probably isn't unique to you, and it is probably something easy to fix.
 Most surprises faced have to do with defects in the code, blog issues, and
-personal configurations.Together we will figure out what isn't going
+personal configurations. Together we will figure out what isn't going
 quite right and make things right again.
 
-In addition to using to [[https://github.com/org2blog/org2blog/issues][reporting]] it right away, the following links can help too:
+Here is where to begin:
 
-- How To Debug Difficult Problems
+- Go [[https://github.com/org2blog/org2blog/issues][here]] to search forthe issue and maybe report. Don't hesitate because it
+  is easier to close an already solved issue than go through the pain of
+  trying to figure out a solved problem.
+- Review the documentation by searching for keywords: it might be a documented
+  feature
+- If you need to dig deeper
 - The documentation for ~owp-user-report~ walks you through the entire process
-of investigation. It can be intimidating at first. As you read through
-it though you will find that Org2Blog has a few clearly defined layers.
-When you "see" them they will make a lot of sense. Once you are
-comfortable with the ideas there, enable reporting with =UI [Reporting On]=
-- [[./docs/DebuggingStories.org][Difficult Problems Faced And Resolved With Org2Blog]].
-- When It Seems Like Org2Blog Talk To The Server No Matter What
-- Sometimes Org2Blog just doesn't seem to work at all. It can't talk to the
-server. There is no explanation. The error messages are next to useless.
-It is baffling and very frustrating. This has happened to a few of us and
-it is very upsetting to have our blogging system break.
-- Based on our research the best we can figure out is that it has something
-to do with TLS. Read the "Difficult Problems Faced" resource to get into
-the details.
-- The faster answer to know though is that the solution was to prevent Emacs
-from using TLSv1.3. Here is how:
-#+name: org_gcr_2019-01-31T23-58-28-06-00_cosmicality_B75B85C4-2197-4893-9F13-70D0212F5E8D
-#+begin_src emacs-lisp
-(setq gnutls-algorithm-priority "NORMAL:-VERS-TLS1.3")
-#+end_src
-- Via [[https://www.reddit.com/r/emacs/comments/cl2aw8/setting_setq_gnutlsalgorithmpriority/evw972x?utm_source=share&utm_medium=web2x][this post]] it seems that the bug is in =gnutls= and this solution works
-around it.
+  of investigation. It can be intimidating at first. As you read through
+  it though you will find that Org2Blog has a few clearly defined layers.
+  When you "see" them they will make a lot of sense. Once you are
+  comfortable with the ideas there, enable reporting with =UI [Reporting On]=
 
 * Development
 :PROPERTIES:
